added capability to have svis and l2vlans to share one evpn_vlan_bundle

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
@@ -29,6 +29,12 @@ vlan 70
 vlan 80
    name vstorage
 !
+vlan 90
+   name vlan90
+!
+vlan 100
+   name vlan100
+!
 vlan 1008
    name SVI_1
 !
@@ -121,6 +127,8 @@ interface Vxlan1
    vxlan vlan 60 vni 10060
    vxlan vlan 70 vni 10070
    vxlan vlan 80 vni 10080
+   vxlan vlan 90 vni 20090
+   vxlan vlan 100 vni 20100
    vxlan vlan 1010 vni 21010
    vxlan vlan 1013 vni 21013
    vxlan vrf SIT2 vni 654789
@@ -178,7 +186,7 @@ router bgp 65101
       rd 1.1.1.1:333
       route-target both 303:333
       redistribute learned
-      vlan 1008-1009,1011-1012
+      vlan 90,100,1008-1009,1011-1012
    !
    vlan-aware-bundle bundle4
       rd 1.1.1.1:444
