--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/evpn_vlan_bundle.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/evpn_vlan_bundle.yml
@@ -52,6 +52,15 @@ tenants:
   - name: SIT
     vlan_aware_bundle_number_base: 300
     mac_vrf_vni_base: 20000
+    l2vlans:
+      - id: 90
+        name: vlan90
+        tags: ['ipmi']
+        evpn_vlan_bundle: bundle3
+      - id: 100
+        name: vlan100
+        tags: ['fabric']
+        evpn_vlan_bundle: bundle3
     vrfs:
       - name: SIT_VRF
         vrf_vni: 789654
