Feat(eos_cli_config_gen): Add more 'pim ipv4' interface commands

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -144,7 +144,11 @@ interface Port-Channel99
    no switchport
    ip address 192.0.2.10/31
    pim ipv4 sparse-mode
+   pim ipv4 bidirectional
+   pim ipv4 hello interval 15
+   pim ipv4 hello count 4.5
    pim ipv4 dr-priority 200
+   pim ipv4 bfd
 !
 interface Port-Channel100
    logging event link-status
