--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -144,6 +144,11 @@ ethernet_interfaces:
         dr_priority: 200
         sparse_mode: true
         border_router: true
+        bfd: true
+        bidirectional: true
+        hello:
+          count: 2.5
+          interval: 10
     isis_enable: ISIS_TEST
     isis_passive: false
     isis_metric: 99
