--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -192,6 +192,11 @@ port_channel_interfaces:
       ipv4:
         dr_priority: 200
         sparse_mode: true
+        bfd: true
+        bidirectional: true
+        hello:
+          count: 4.5
+          interval: 15
 
   - name: Port-Channel101
     description: PVLAN Promiscuous Access - only one secondary
