--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vlan-interfaces.yml
@@ -107,6 +107,11 @@ vlan_interfaces:
       ipv4:
         dr_priority: 200
         sparse_mode: true
+        bfd: true
+        bidirectional: true
+        hello:
+          count: 3.5
+          interval: 10
 
 # Helpers on SVI
 
