--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -91,8 +91,12 @@ interface Ethernet5
    ip ospf area 100
    ip ospf message-digest-key 1 sha512 7 asfddja23452
    pim ipv4 sparse-mode
+   pim ipv4 bidirectional
    pim ipv4 border-router
+   pim ipv4 hello interval 10
+   pim ipv4 hello count 2.5
    pim ipv4 dr-priority 200
+   pim ipv4 bfd
    isis enable ISIS_TEST
    isis circuit-type level-2
    isis metric 99
