Minor refactoring to avoid touching svis

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
@@ -129,8 +129,14 @@ interface Vxlan1
    vxlan vlan 80 vni 10080
    vxlan vlan 90 vni 20090
    vxlan vlan 100 vni 20100
+   vxlan vlan 1008 vni 21008
+   vxlan vlan 1009 vni 21009
    vxlan vlan 1010 vni 21010
+   vxlan vlan 1011 vni 21011
+   vxlan vlan 1012 vni 21012
    vxlan vlan 1013 vni 21013
+   vxlan vlan 1014 vni 21014
+   vxlan vlan 1015 vni 21015
    vxlan vrf SIT2 vni 654789
    vxlan vrf SIT3 vni 654555
    vxlan vrf SIT_VRF vni 789654
