Test: Run molecule

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -136,6 +136,7 @@ router path-selection
       path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
+      hop count lowest
       jitter 42
       path-group LAN_HA
       path-group MPLS
