Feat(eos_cli_config_gen): 1-step Boundary Clock support

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
@@ -14,6 +14,7 @@ ptp:
     event:
       dscp: 46
   mode: boundary
+  boundary_one_step: true
   forward_unicast: true
   monitor:
     # enabled: true (default)
