--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ptp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ptp.schema.yml
@@ -14,6 +14,8 @@ keys:
         valid_values:
         - boundary
         - transparent
+      boundary_one_step:
+        type: bool
       forward_unicast:
         type: bool
       clock_identity:
