--- a/ansible_collections/arista/avd/roles/build_output_folders/defaults/main.yml
+++ b/ansible_collections/arista/avd/roles/build_output_folders/defaults/main.yml
@@ -49,6 +49,10 @@ test_catalogs_dir: '{{ output_dir }}/{{ test_catalogs_dir_name }}'
 eos_validate_state_name: 'reports'
 eos_validate_state_dir: '{{ root_dir }}/{{ eos_validate_state_name }}'
 
+# Input directory for custom ANTA catalogs:
+custom_anta_catalogs_dir_name: "custom_anta_catalogs"
+custom_anta_catalogs_dir: "{{ root_dir }}/{{ custom_anta_catalogs_dir_name }}"
+
 # EOS snapshots directory name
 snapshots_backup_dir_name: 'snapshots'
 snapshots_backup_dir: '{{ root_dir }}/{{ snapshots_backup_dir_name }}'
