--- a/ansible_collections/arista/avd/roles/eos_validate_state/defaults/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_validate_state/defaults/main.yml
@@ -30,7 +30,7 @@ eos_validate_state_csv_report_path: "{{ eos_validate_state_dir }}/{{ fabric_name
 
 # Input directory for custom ANTA catalogs:
 custom_anta_catalogs_dir_name: "custom_anta_catalogs"
-custom_anta_catalogs_dir: "{{ output_dir }}/{{ custom_anta_catalogs_dir_name }}"
+custom_anta_catalogs_dir: "{{ root_dir }}/{{ custom_anta_catalogs_dir_name }}"
 
 # Markdown flavor to support non-text rendering
 # Only support default and github
