Feat(eos_designs): Allow to control DPS timers at the wan_path_group level

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -104,6 +104,7 @@ router path-selection
    !
    path-group Satellite id 104
       ipsec profile CP-PROFILE
+      keepalive interval auto
       !
       local interface Ethernet1
       !
