--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -117,12 +117,14 @@ router path-selection
    !
    path-group LTE id 102
       ipsec profile CP-PROFILE
+      keepalive interval 100 milliseconds failure-threshold 12 intervals
       !
       local interface Ethernet3
       !
       peer dynamic
    !
    path-group MPLS id 100
+      keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
       local interface Ethernet2
          stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
