--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -116,6 +116,7 @@ router path-selection
          ipv4 address 172.17.0.7
    !
    path-group MPLS id 100
+      keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
       local interface Ethernet2
          stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
