--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -144,6 +144,7 @@ router path-selection
          ipv4 address 172.17.0.1
    !
    path-group MPLS id 100
+      keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
       local interface Ethernet2.42
          stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
