--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -138,6 +138,7 @@ router path-selection
    path-group LTE id 102
    !
    path-group MPLS id 100
+      keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
       local interface Ethernet2
       !
