--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3627,6 +3627,31 @@ keys:
                 type: str
                 description: Optional, if not set, the path-group `name` is used as
                   local.
+        dps_keepalive:
+          type: dict
+          description: Period between the transmission of consecutive keepalive messages,
+            and failure threshold.
+          keys:
+            interval:
+              type: str
+              convert_types:
+              - int
+              description: 'Interval in milliseconds. Valid values are 50-60000 |
+                "auto"
+
+
+                When auto, the interval and failure_threshold are automatically determined
+                based on
+
+                path state.'
+            failure_threshold:
+              type: int
+              min: 2
+              max: 100
+              default: 5
+              description: Failure threshold in number of lost keep-alive messages.
+              convert_types:
+              - str
   wan_route_servers:
     documentation_options:
       table: wan-settings
