--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
@@ -49,3 +49,25 @@ keys:
               local:
                 type: str
                 description: Optional, if not set, the path-group `name` is used as local.
+        dps_keepalive:
+          type: dict
+          description: |-
+            Period between the transmission of consecutive keepalive messages, and failure threshold.
+          keys:
+            interval:
+              type: str
+              convert_types:
+                - int
+              description: |-
+                Interval in milliseconds. Valid values are 50-60000 | "auto"
+
+                When auto, the interval and failure_threshold are automatically determined based on
+                path state.
+            failure_threshold:
+              type: int
+              min: 2
+              max: 100
+              default: 5
+              description: Failure threshold in number of lost keep-alive messages.
+              convert_types:
+                - str
