Rename devices and adjust vars after rebase

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router1.cfg
@@ -1,12 +1,8 @@
 !RANCID-CONTENT-TYPE: arista
 !
-vlan internal order ascending range 1006 1199
-!
-transceiver qsfp default-mode 4x10G
-!
 service routing protocols model multi-agent
 !
-hostname uplink_lan_wan_edge2
+hostname uplink_lan_wan_router1
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -36,7 +32,7 @@ vrf instance VRF1
 ip security
    !
    ike policy CP-IKE-POLICY
-      local-id 192.168.2.2
+      local-id 192.168.2.1
    !
    sa policy CP-SA-POLICY
    !
@@ -53,19 +49,14 @@ ip security
 !
 interface Dps1
    description DPS Interface
-   ip address 192.168.2.2/32
+   mtu 9214
+   ip address 192.168.2.1/32
 !
 interface Ethernet2
-   description UPLINK_LAN_L2LEAF_Ethernet2
+   description UPLINK_LAN_L2LEAF_Ethernet1
    no shutdown
    mtu 9214
    no switchport
-!
-interface Ethernet2.10
-   description VLAN10_NATIVE
-   no shutdown
-   mtu 9214
-   encapsulation dot1q vlan 10
    vrf VRF1
    ip address 10.0.10.1/24
 !
@@ -82,10 +73,10 @@ interface Ethernet2.100
 interface Loopback0
    description Router_ID
    no shutdown
-   ip address 192.168.1.2/32
+   ip address 192.168.1.1/32
 !
 interface Vxlan1
-   description uplink_lan_wan_edge2_VTEP
+   description uplink_lan_wan_router1_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
 !
@@ -107,8 +98,21 @@ ipv6 unicast-routing vrf VRF1
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.1.0/24 eq 32
 !
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
+   description Mark prefixes originated from the LAN
+   set extcommunity soo 192.168.1.1:0 additive
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
+   description Advertise local routes towards LAN
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise routes received from WAN iBGP towards LAN
+   match route-type internal
+!
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+   set extcommunity soo 192.168.1.1:0 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
