--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -329,8 +329,8 @@ all:
         UPLINK_LAN_TESTS:
           hosts:
             uplink_lan_l2leaf:
-            uplink_lan_wan_edge1:
-            uplink_lan_wan_edge2:
+            uplink_lan_wan_router1:
+            uplink_lan_wan_router2:
         NEW_NETWORK_SERVICES_BGP_VRF_CONFIG_TESTS:
           hosts:
             new_network_services_bgp_vrf_config_true:
