--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/node_type_keys.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/node_type_keys.schema.yml
@@ -146,7 +146,7 @@ keys:
             - lan
           default: p2p
           description: |-
-            `uplink_type` must be `p2p` or `p2p-vrfs` if `vtep` or `underlay_router` is true.
+            `uplink_type` must be `p2p`, `p2p-vrfs` or `lan` if `vtep` or `underlay_router` is true.
 
             For `p2p-vrfs`, the uplinks are configured as L3 interfaces with a subinterface for each VRF
             in `network_services` present on both the uplink and the downlink switch.
