--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge.cfg
@@ -26,37 +26,37 @@ router path-selection
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
    !
-   load-balance policy LB-DEFAULT-AVT-POLICY-IT
+   load-balance policy LB-DEFAULT-AUTOVPN-POLICY-IT
       path-group INET priority 2
    !
-   load-balance policy LB-PROD-AVT-POLICY-DEFAULT
+   load-balance policy LB-PROD-AUTOVPN-POLICY-DEFAULT
       path-group INET
    !
-   load-balance policy LB-PROD-AVT-POLICY-VIDEO
+   load-balance policy LB-PROD-AUTOVPN-POLICY-VIDEO
       path-group INET
    !
-   load-balance policy LB-PROD-AVT-POLICY-VOICE
+   load-balance policy LB-PROD-AUTOVPN-POLICY-VOICE
       path-group INET
    !
-   policy DEFAULT-AVT-POLICY-WITH-CP
+   policy DEFAULT-AUTOVPN-POLICY-WITH-CP
       10 application-profile CONTROL-PLANE-APPLICATION-PROFILE
          load-balance LB-CONTROL-PLANE-PROFILE
       20 application-profile IT
-         load-balance LB-DEFAULT-AVT-POLICY-IT
+         load-balance LB-DEFAULT-AUTOVPN-POLICY-IT
    !
-   policy PROD-AVT-POLICY
+   policy PROD-AUTOVPN-POLICY
       default-match
-         load-balance LB-PROD-AVT-POLICY-DEFAULT
+         load-balance LB-PROD-AUTOVPN-POLICY-DEFAULT
       10 application-profile VOICE
-         load-balance LB-PROD-AVT-POLICY-VOICE
+         load-balance LB-PROD-AUTOVPN-POLICY-VOICE
       20 application-profile VIDEO
-         load-balance LB-PROD-AVT-POLICY-VIDEO
+         load-balance LB-PROD-AUTOVPN-POLICY-VIDEO
    !
    vrf default
-      path-selection-policy DEFAULT-AVT-POLICY-WITH-CP
+      path-selection-policy DEFAULT-AUTOVPN-POLICY-WITH-CP
    !
    vrf PROD
-      path-selection-policy PROD-AVT-POLICY
+      path-selection-policy PROD-AUTOVPN-POLICY
 !
 spanning-tree mode none
 !
@@ -108,7 +108,6 @@ interface Vxlan1
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
-   vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
 !
 application traffic recognition
@@ -194,13 +193,6 @@ router bgp 65000
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
-   !
-   vrf IT
-      rd 192.168.30.1:100
-      route-target import evpn 100:100
-      route-target export evpn 100:100
-      router-id 192.168.30.1
-      redistribute connected
    !
    vrf PROD
       rd 192.168.30.1:42
