--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
@@ -12,15 +12,18 @@ flow tracking hardware
 !
 service routing protocols model multi-agent
 !
-hostname cv-pathfinder-edge-no-default-policy
+hostname cv-pathfinder-edge-custom-default-policy
 !
 router adaptive-virtual-topology
    topology role edge
-   region AVD_Land_East id 43
+   region AVD_Land_West id 42
    zone DEFAULT-ZONE id 1
-   site Site511 id 511
+   site Site1 id 1
    !
    policy DEFAULT-POLICY
+      !
+      match application-profile VIDEO
+         avt profile DEFAULT-POLICY-VIDEO
       !
       match application-profile default
          avt profile DEFAULT-POLICY-DEFAULT
@@ -29,6 +32,9 @@ router adaptive-virtual-topology
       !
       match application-profile CONTROL-PLANE-APPLICATION-PROFILE
          avt profile CONTROL-PLANE-PROFILE
+      !
+      match application-profile VIDEO
+         avt profile DEFAULT-POLICY-VIDEO
       !
       match application-profile default
          avt profile DEFAULT-POLICY-DEFAULT
@@ -39,18 +45,19 @@ router adaptive-virtual-topology
    profile DEFAULT-POLICY-DEFAULT
       path-selection load-balance LB-DEFAULT-POLICY-DEFAULT
    !
+   profile DEFAULT-POLICY-VIDEO
+      path-selection load-balance LB-DEFAULT-POLICY-VIDEO
+   !
    vrf default
       avt policy DEFAULT-POLICY-WITH-CP
       avt profile DEFAULT-POLICY-DEFAULT id 1
+      avt profile DEFAULT-POLICY-VIDEO id 3
       avt profile CONTROL-PLANE-PROFILE id 254
-   !
-   vrf IT
-      avt policy DEFAULT-POLICY
-      avt profile DEFAULT-POLICY-DEFAULT id 1
    !
    vrf PROD
       avt policy DEFAULT-POLICY
       avt profile DEFAULT-POLICY-DEFAULT id 1
+      avt profile DEFAULT-POLICY-VIDEO id 3
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -92,15 +99,16 @@ router path-selection
    !
    load-balance policy LB-DEFAULT-POLICY-DEFAULT
       path-group INET
-      path-group LTE
+      path-group LTE priority 42
+   !
+   load-balance policy LB-DEFAULT-POLICY-VIDEO
+      path-group INET
       path-group MPLS
 !
 spanning-tree mode none
 !
 no enable password
 no aaa root
-!
-vrf instance IT
 !
 vrf instance MGMT
 !
@@ -168,11 +176,10 @@ interface Loopback0
    ip address 192.168.42.1/32
 !
 interface Vxlan1
-   description cv-pathfinder-edge-no-default-policy_VTEP
+   description cv-pathfinder-edge-custom-default-policy_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
-   vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
 !
 application traffic recognition
@@ -183,22 +190,25 @@ application traffic recognition
    application-profile CONTROL-PLANE-APPLICATION-PROFILE
       application CONTROL-PLANE-APPLICATION
    !
+   application-profile VIDEO
+      application CUSTOM-APPLICATION-1
+      application skype
+   !
    field-set ipv4 prefix CONTROL-PLANE-APP-DEST-PREFIXES
       192.168.144.1/32
 !
 ip routing
-ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
 !
-ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.1:511
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.1:1
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.42.1:511 additive
+   set extcommunity soo 192.168.42.1:1 additive
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
@@ -209,7 +219,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.42.1:511 additive
+   set extcommunity soo 192.168.42.1:1 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -257,13 +267,6 @@ router bgp 65000
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
-   !
-   vrf IT
-      rd 192.168.42.1:100
-      route-target import evpn 100:100
-      route-target export evpn 100:100
-      router-id 192.168.42.1
-      redistribute connected
    !
    vrf PROD
       rd 192.168.42.1:42
