--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -41,6 +41,11 @@ router adaptive-virtual-topology
       match application-profile default
          avt profile DEFAULT-AVT-POLICY-DEFAULT
    !
+   policy DEFAULT-POLICY
+      !
+      match application-profile default
+         avt profile DEFAULT-POLICY-DEFAULT
+   !
    policy PROD-AVT-POLICY
       !
       match application-profile VOICE
@@ -61,6 +66,9 @@ router adaptive-virtual-topology
    profile DEFAULT-AVT-POLICY-VIDEO
       path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
    !
+   profile DEFAULT-POLICY-DEFAULT
+      path-selection load-balance LB-DEFAULT-POLICY-DEFAULT
+   !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
    !
@@ -69,6 +77,10 @@ router adaptive-virtual-topology
    !
    profile PROD-AVT-POLICY-VOICE
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
+   !
+   vrf ATTRACTED-VRF-FROM-UPLINK
+      avt policy DEFAULT-POLICY
+      avt profile DEFAULT-POLICY-DEFAULT id 1
    !
    vrf default
       avt policy DEFAULT-AVT-POLICY-WITH-CP
@@ -104,6 +116,9 @@ router path-selection
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
    !
+   load-balance policy LB-DEFAULT-POLICY-DEFAULT
+      path-group Satellite
+   !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
@@ -116,6 +131,8 @@ spanning-tree mode none
 !
 no enable password
 no aaa root
+!
+vrf instance ATTRACTED-VRF-FROM-UPLINK
 !
 vrf instance IT
 !
@@ -175,19 +192,27 @@ interface Ethernet52
    flow tracker hardware WAN-FLOW-TRACKER
    ip address 172.17.0.3/31
 !
-interface Ethernet52.42
-   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.42_vrf_PROD
+interface Ethernet52.142
+   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.142_vrf_PROD
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 42
+   encapsulation dot1q vlan 142
    vrf PROD
    ip address 172.17.0.3/31
 !
-interface Ethernet52.100
-   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.100_vrf_IT
+interface Ethernet52.666
+   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
    no shutdown
    mtu 9214
-   encapsulation dot1q vlan 100
+   encapsulation dot1q vlan 666
+   vrf ATTRACTED-VRF-FROM-UPLINK
+   ip address 172.17.0.3/31
+!
+interface Ethernet52.1000
+   description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.1000_vrf_IT
+   no shutdown
+   mtu 9214
+   encapsulation dot1q vlan 1000
    vrf IT
    ip address 172.17.0.3/31
 !
@@ -200,6 +225,7 @@ interface Vxlan1
    description cv-pathfinder-edge-no-common-path-group_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
+   vxlan vrf ATTRACTED-VRF-FROM-UPLINK vni 166
    vxlan vrf default vni 1
    vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
@@ -247,6 +273,7 @@ application traffic recognition
       42
 !
 ip routing
+ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
@@ -329,6 +356,16 @@ router bgp 65000
       bgp additional-paths send any
       neighbor WAN-OVERLAY-PEERS activate
    !
+   vrf ATTRACTED-VRF-FROM-UPLINK
+      rd 192.168.42.2:666
+      route-target import evpn 666:666
+      route-target export evpn 666:666
+      router-id 192.168.42.2
+      neighbor 172.17.0.2 remote-as 65199
+      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.2 description site-ha-disabled-leaf_Ethernet2.666_vrf_ATTRACTED-VRF-FROM-UPLINK
+      redistribute connected
+   !
    vrf default
       rd 192.168.42.2:1
       route-target import evpn 1:1
@@ -336,23 +373,23 @@ router bgp 65000
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
    !
    vrf IT
-      rd 192.168.42.2:100
-      route-target import evpn 100:100
-      route-target export evpn 100:100
+      rd 192.168.42.2:1000
+      route-target import evpn 1000:1000
+      route-target export evpn 1000:1000
       router-id 192.168.42.2
       neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-disabled-leaf_Ethernet2.100_vrf_IT
+      neighbor 172.17.0.2 description site-ha-disabled-leaf_Ethernet2.1000_vrf_IT
       redistribute connected
    !
    vrf PROD
-      rd 192.168.42.2:42
-      route-target import evpn 42:42
-      route-target export evpn 42:42
+      rd 192.168.42.2:142
+      route-target import evpn 142:142
+      route-target export evpn 142:142
       router-id 192.168.42.2
       neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.2 description site-ha-disabled-leaf_Ethernet2.42_vrf_PROD
+      neighbor 172.17.0.2 description site-ha-disabled-leaf_Ethernet2.142_vrf_PROD
       redistribute connected
 !
 router traffic-engineering
