--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/uplink_lan_wan_router2.cfg
@@ -9,16 +9,23 @@ router path-selection
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
    !
-   load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
+   load-balance policy LB-DEFAULT-POLICY-DEFAULT
    !
-   policy DEFAULT-AVT-POLICY-WITH-CP
+   policy DEFAULT-POLICY
       default-match
-         load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
+         load-balance LB-DEFAULT-POLICY-DEFAULT
+   !
+   policy DEFAULT-POLICY-WITH-CP
+      default-match
+         load-balance LB-DEFAULT-POLICY-DEFAULT
       10 application-profile CONTROL-PLANE-APPLICATION-PROFILE
          load-balance LB-CONTROL-PLANE-PROFILE
    !
    vrf default
-      path-selection-policy DEFAULT-AVT-POLICY-WITH-CP
+      path-selection-policy DEFAULT-POLICY-WITH-CP
+   !
+   vrf VRF1
+      path-selection-policy DEFAULT-POLICY
 !
 spanning-tree mode none
 !
