--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router2.yml
@@ -136,19 +136,24 @@ router_path_selection:
   tcp_mss_ceiling:
     ipv4_segment_size: auto
   load_balance_policies:
+  - name: LB-DEFAULT-POLICY-DEFAULT
   - name: LB-CONTROL-PLANE-PROFILE
-  - name: LB-DEFAULT-AVT-POLICY-DEFAULT
   policies:
-  - name: DEFAULT-AVT-POLICY-WITH-CP
+  - name: DEFAULT-POLICY
+    default_match:
+      load_balance: LB-DEFAULT-POLICY-DEFAULT
+  - name: DEFAULT-POLICY-WITH-CP
     rules:
     - id: 10
       application_profile: CONTROL-PLANE-APPLICATION-PROFILE
       load_balance: LB-CONTROL-PLANE-PROFILE
     default_match:
-      load_balance: LB-DEFAULT-AVT-POLICY-DEFAULT
+      load_balance: LB-DEFAULT-POLICY-DEFAULT
   vrfs:
+  - name: VRF1
+    path_selection_policy: DEFAULT-POLICY
   - name: default
-    path_selection_policy: DEFAULT-AVT-POLICY-WITH-CP
+    path_selection_policy: DEFAULT-POLICY-WITH-CP
 application_traffic_recognition:
   application_profiles:
   - name: CONTROL-PLANE-APPLICATION-PROFILE
