Feat(eos_designs):Add support for connected endpoints running PTP on MLAG switches

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-leaf2.yml
@@ -249,6 +249,24 @@ port_channel_interfaces:
   mode: trunk
   vlans: '11'
   mlag: 14
+- name: Port-Channel1
+  description: Endpoint-with-mpass
+  type: switched
+  shutdown: false
+  ptp:
+    announce:
+      interval: 0
+      timeout: 3
+    delay_req: -3
+    sync_message:
+      interval: -3
+    transport: ipv4
+    enable: true
+    role: master
+  mode: access
+  vlans: '11'
+  mlag: 1
+  ptp_mpass: true
 ethernet_interfaces:
 - name: Ethernet9
   peer: ptp-tests-leaf1
@@ -356,6 +374,16 @@ ethernet_interfaces:
     transport: ipv4
     enable: true
     role: master
+- name: Port-Channel2
+  peer: Endpoint-with-mpass
+  peer_interface: PCI2
+  peer_type: server
+  description: Endpoint-with-mpass_PCI2
+  shutdown: false
+  type: port-channel-member
+  channel_group:
+    id: 1
+    mode: active
 mlag_configuration:
   domain_id: ptp-test-leaf
   local_interface: Vlan4094
