--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
@@ -543,6 +543,8 @@ keys:
             - network
         vmtracer:
           type: bool
+        ptp_mpass:
+          type: bool
         ptp:
           type: dict
           keys:
