--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf1.cfg
@@ -47,6 +47,20 @@ vrf instance MGMT
 !
 vrf instance VRF1
 !
+interface Port-Channel1
+   description Endpoint-with-mpass
+   no shutdown
+   switchport
+   switchport access vlan 11
+   mlag 1
+   ptp enable
+   ptp announce interval 0
+   ptp announce timeout 3
+   ptp delay-req interval -3
+   ptp sync-message interval -3
+   ptp role master
+   ptp transport ipv4
+!
 interface Port-Channel9
    description MLAG_PEER_ptp-tests-leaf2_Po9
    no shutdown
@@ -183,6 +197,11 @@ interface Ethernet14
    description PTP-TESTS-L2LEAF2-PTP-ENABLED-UPLINK-DISABLED_Ethernet1
    no shutdown
    channel-group 14 mode active
+!
+interface Port-Channel1
+   description Endpoint-with-mpass_PCI1
+   no shutdown
+   channel-group 1 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
