--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7669,6 +7669,8 @@ keys:
           - network
         vmtracer:
           type: bool
+        ptp_mpass:
+          type: bool
         ptp:
           type: dict
           keys:
