--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -4327,6 +4327,9 @@ $defs:
               Setting to false will set port to ''shutdown'' in intended configuration.
 
               '
+          ptp_mpass:
+            type: bool
+            default: false
           esi:
             type: str
             description: Format xxxx:xxxx:xxxx.
