--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_adapter_config.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_adapter_config.schema.yml
@@ -455,6 +455,9 @@ $defs:
             description: |
               Port-Channel administrative state.
               Setting to false will set port to 'shutdown' in intended configuration.
+          ptp_mpass:
+            type: bool
+            default: false
           esi:
             type: str
             description: Format xxxx:xxxx:xxxx.
