--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1399,6 +1399,17 @@ keys:
     type: int
     convert_types:
     - str
+  isis_system_id_format:
+    display_name: ISIS Default IS System-ID format
+    description: Configures source for the system-id within the ISIS net id. If `underlay_loopback`
+      is selected then all node `isis_system_id_prefix` settings will be ignored.
+    documentation_options:
+      table: isis-settings
+    type: str
+    valid_values:
+    - node_id
+    - underlay_loopback
+    default: node_id
   isis_ti_lfa:
     documentation_options:
       table: isis-settings
